Ajout d'annexes - Link formalism - Proposal

--- a/rapport.tex
+++ b/rapport.tex
@@ -990,5 +990,27 @@ déclarer des unités functorisées et leurs applications.
 \bibliographystyle{plain}
 \bibliography{biblio}
 
+\appendix
+
+\chapter{Formalisme simple de l'édition des liens avant et après 4.02}
+
+Cette annexe est tirée de la proposition de namespaces pour 4.02. Celle-ci est
+découpée en deux parties : un état de l'art sur la manière de simuler les
+namespaces avec des exemples et une formalisation relativement simplifiée du
+mécanisme de l'édition des liens. Cette partie est intéressante notamment pour
+expliquer comment l'ajout des alias de modules a changé l'édition des liens et
+la gestion des dépendances pour pouvoir compiler un programme. Cette partie est
+rédigée en anglais, puisqu'elle est directement tirée de la proposition.
+
+
+\input{linking-form}
+
+\chapter{Proposition originelle}
+
+L'annexe qui suit est la version finale de la proposition de namespaces écrite
+comme référence pour la communauté. Elle n'est pas forcément utile pour
+comprendre ce rapport mais fait parti du travail effectué durant ce stage.
+
+\input{proposal}
 
 \end{document}
