Maj avec retours Fabrice

--- a/biblio.bib
+++ b/biblio.bib
@@ -195,12 +195,22 @@
 
 @misc{linking-not-subst,
   author={Jeremy Siek},
+  year={2012},
   title= {Linking isn't substitution: the separately-compiled lambda calculus},
   note={http://siek.blogspot.fr/2012/07/linking-isnt-substitution-separately.html}
 }
 
 @misc{remy-scherer-prop,
   author={Gabriel Scherer and Didier Rémy},
+  year={2012},
   title={Namespaces for OCaml: a proposal},
   note={http://gallium.inria.fr/~scherer/namespaces/spec.pdf}
+}
+
+
+@misc{lefessant-prop,
+  author={Fabrice Le Fessant},
+  year={2012},
+  title={Proposal for namespaces},
+  note={url??}
 }
