--- a/rapport.tex
+++ b/rapport.tex
@@ -20,7 +20,7 @@
                       %% stringstyle=\color{red},
                       %% identifierstyle=\ttfamily,
                       %% keywordstyle=\color{blue},
-                      %% basicstyle=\footnotesize\tt,
+                      basicstyle=\footnotesize\tt,
                       otherkeywords={namespace, abstract}
                     }
                   }
@@ -31,6 +31,8 @@
 \maketitle
 
 \section*{Remerciements}
+
+!!!TODO!!!
 
 \tableofcontents
 
@@ -48,7 +50,7 @@ programme. Typiquement, si on suppose que deux structures de données,
 relativement identiques (créer, ajouter, retirer, itérer, etc), les noms des
 fonctions seraient de l'ordre de \texttt{hashtbl\_add, hashtbl\_find} et
 respectivement pour Map. Si maintenant quelqu'un voulait utiliser sa propre
-implémentation de table de hashages, il se retrouverait à écrire des noms
+implémentation de tables de hashage, il se retrouverait à écrire des noms
 suffisament longs pour éviter tout conflit.
 
 En terme de passage à l'échelle, ce problème est évident : il devient
@@ -68,12 +70,10 @@ s'applique aussi bien aux blocs, aux fonctions mais aussi aux \emph{unités de
 
 OCaml en particulier est un langage fonctionnel fortement typé et possédant
 notamment un système de modules dont l'utilité est de pouvoir définir des
-espaces de noms d'ordre supérieur : un module dans le système de type de ML est
-une valeur comme une autre, et de ce fait il est possible d'utiliser un module
-en paramètre de fonction et également d'avoir des applications de modules. Ces
-applications, ou \emph{foncteurs}, permettent de définir des modules abstraits
-sur une interface et donc une meilleure réutilisabilité du code. Un module peut
-être déclaré à n'importe quel endroit du code, et une unité de compilation est
+espaces de noms et d'être paramétriques sur d'autres modules. Ces applications,
+ou \emph{foncteurs}, permettent de définir des modules abstraits sur une
+interface et donc une meilleure réutilisabilité du code. Un module peut être
+déclaré à n'importe quel endroit du code, et une unité de compilation est
 elle-même un module, à la différence près qu'elle ne peut être functorisée.
 
 En revanche, malgré un système de modules fort, le passage à l'échelle peut
@@ -89,8 +89,8 @@ discriminants que le nom du module pour permettre une édition des liens
 correcte. Autrement dit, il devient nécessaire d'avoir une notion d'espace de
 noms pour les unité de compilation.
 
-Ce stage a été réalisé au sein d'OCamlPro et sous la direction de Fabrice Le
-Fessant.
+Ce stage a été réalisé au sein de l'Inria et en collaboration avec OCamlPro,
+sous la direction de Fabrice Le Fessant.
 
 \chapter{Etat de l'art}
 
@@ -132,7 +132,15 @@ classe est l'unité de base le langage, il est donc nécessaire d'avoir ce
 mécanisme de noms longs pour les différencier. En revanche, les clauses
 d'importation de Scala permettent une meilleure expressivité en donnant la
 possibilité d'importer plusieurs classes d'un package mais aussi en les aliasant
-ou en les masquant dans le cas où tout le package est importé.
+ou en les masquant dans le cas où tout le package est importé. Par exemple :
+\begin{verbatim}
+import mypackage.{Obj; _; Point => _}
+import another_package.{Obj2 => O; Point}
+\end{verbatim}
+où dans ce cas précis l'objet \texttt{Obj} ainsi que tous ceux dans
+\texttt{mypackage} sont importés, à l'exception de \texttt{Point}, tandis que
+\texttt{Obj2} (renommé en \texttt{O}) et \texttt{Point} sont import de
+\texttt{another_package}.
 
 OCaml quand à lui possède déjà son système de modules\cite{Leroy00} qui fait
 office de mécanisme de namespaces : les fonctions et valeurs peuvent être ainsi
@@ -140,10 +148,10 @@ préfixées d'un chemin, permettant alors de différencier celles-ci à l'exécu
 et à la compilation. Néanmoins, deux unités de compilation ne peuvent coexister
 dans un programme si celles-ci ont un même nom.
 
-Finalement un travail récent a été fait autour d'Haskell pour résoudre notamment
+De plus un travail récent a été fait autour d'Haskell pour résoudre notamment
 le problème de compilation séparé\cite{KilpatrickDJM14} : en effet, le système
 de modules d'Haskell ne possède pas de \emph{signatures}, et par conséquent
-n'est pas capable de compiler de manière distribuer un programme. Une unité de
+n'est pas capable de compiler de manière distribuée un programme. Une unité de
 compilation n'est compilable qu'à partir du moment où toutes ses dépendances le
 sont. Le résultat est un langage de packages au dessus d'Haskell, qui permet en
 outre de \emph{typer-checker} un programme sans donner d'implémentation pour
@@ -153,25 +161,20 @@ système de packages pour distinguer les modules.
 Finalement, il est important de s'intéresser aux nombreuses discussions de la
 communauté\cite{ocaml-platform} et particulièrement aux différentes propositions
 émises par certains mainteneurs du compilateur\cite{ocaml-proposals}, notamment
-un langage formel de description d'environnement\cite{remy-scherer-prop} et
-décrivant ainsi les possibilités attendues pour des namespaces. Jusqu'ici dans
-le langage plusieurs solutions alternatives étaient disponibles pour palier au
-manque de namespaces : les noms longs, les packs de modules et les modules
-utilisés comme namespaces à l'aide d'alias. Des exemples concrets sont donnés à
-la fois dans le chapitre suivant mais aussi en annexe \ref{appendix-soa} (page
-\pageref{appendix-soa}), où une formalisation simplifiée est donnée pour
-exprimer ce que représente en terme de dépendances et d'unités de compilation un
-programme correct. Cette annexe présente les changements intervenus avec l'ajout
-des alias de modules et des dépendances dites faibles.
+un langage formel de description d'environnement\cite{remy-scherer-prop}, idée
+initialement introduite dans la proposition de Fabrice Le
+Fessant\cite{lefessant-prop} et décrivant ainsi les possibilités attendues pour
+des namespaces. Jusqu'ici dans le langage plusieurs solutions alternatives
+étaient disponibles pour palier au manque de namespaces : les noms longs, les
+packs de modules et les modules utilisés comme namespaces à l'aide d'alias. Des
+exemples concrets sont donnés à la fois dans le chapitre suivant mais aussi en
+annexe \ref{appendix-soa} (page \pageref{appendix-soa}), où une formalisation
+simplifiée est donnée pour exprimer ce que représente en terme de dépendances et
+d'unités de compilation un programme correct. Cette annexe présente les
+changements intervenus avec l'ajout des alias de modules et des dépendances
+dites faibles.
 
-\chapter{Problématique}
-
-Pour une meilleure compréhension de ce rapport, il est nécessaire de définir
-certains termes qui seront mentionnés de manière régulières. Ainsi, un module
-fera toujours référence à une unité de compilation et non un module déclaré dans
-le fichier, sauf lorsque le contraire est indiqué : cette définition est logique
-puisque la problématique étudiée ici se concentre sur les unités de compilation
-uniquement. 
+\section{Namespaces et OCaml}
 
 Dans l'implémentation actuelle d'OCaml, il est immpossible de lier deux unités
 de compilation de même nom, ou du moins d'y référer de manière explicite. En
@@ -192,7 +195,7 @@ Dans ce sens, l'une des solutions utilisées par les développeurs est de créer
 des \texttt{packs} de modules : il s'agit alors de plusieurs unités de
 compilation regroupées au sein d'une seule qui fait alors office d'espace de
 nom. Cette solution est déjà plus intéressante, car elle permet de distribuer
-une bibliothèque sous la forme d'un seul objet, mais est également plsu souple à
+une bibliothèque sous la forme d'un seul objet, mais est également plus souple à
 l'utilisation. En effet, chaque module est donc accessible à l'aide du chemin
 \texttt{<nom\_du\_pack>.<nom\_de\_l'unité>} : le compilateur transforme chacune
 des unités du pack en sous-module. Ainsi, il suffit d'ouvrir \texttt{open} le
@@ -215,7 +218,7 @@ bibliothèque \emph{Core} ou les développeurs de la bibliothèque \emph{Batteri
 est une suite d'alias d'autres modules, permettant ainsi d'avoir l'avantage du
 pack mais sans le second inconvénient. En effet, puisque ce module est écrit par
 le développeur et non plus généré automatiquement par le compilateur, il est
-possible d'y include du code qui sera directement utilisable dès lors que ce
+possible d'y inclure du code qui sera directement utilisable dès lors que ce
 ``module namespace'' sera ouvert. En revanche, avant la version 4.02 d'OCaml,
 cette solution nécessitait tout de même de donner explicitement au compilateur
 tous les modules référencés dans ce dernier.
@@ -234,7 +237,7 @@ intéressantes:
 \end{enumerate}
 De plus, deux autres fonctionnalités ont été rajoutées:
 \begin{itemize}
-\item une option \texttt{-open} qui permet d'ouvrir un module avec même de
+\item une option \texttt{-open} qui permet d'ouvrir un module avant même de
   commencer à typer le programme;
 \item la sémantique du \texttt{-o} a été modifiée et permet désormais de choisir
   le nom interne de l'unité de compilation qui sera générée (jusque là,
@@ -271,7 +274,7 @@ module Set = Lib_set
 
 Le lecteur attentif remarquera que le nom dans \texttt{lib.ml} des deux modules
 aliasé est différent de leur nom d'origine, et de plus, que \texttt{set.ml} fait
-explicitement référence à \texttt{Map} (donc \texttt{map.ml}). L'astuce icic est
+explicitement référence à \texttt{Map} (donc \texttt{map.ml}). L'astuce ici est
 d'utiliser les fonctionnalités introduite précédemment :
 \begin{enumerate}
 \item \texttt{lib.ml} est d'abord compilé, mais comme ce module ne contient que
@@ -299,6 +302,16 @@ gymnastique non intuitive pour comprendre le schéma de compilation, mais
 capable de l'utiliser. De plus, il manque une propriété importante que l'on
 pourrait attendre des namespaces : l'extensibilité.
 
+\chapter{Problématique et Solution}
+
+Pour une meilleure compréhension de ce rapport, il est nécessaire de définir
+certains termes qui seront mentionnés de manière régulières. Ainsi, un module
+fera toujours référence à une unité de compilation et non un module déclaré dans
+le fichier, sauf lorsque le contraire est indiqué : cette définition est logique
+puisque la problématique étudiée ici se concentre sur les unités de compilation
+uniquement. 
+
+
 L'intérêt n'est pas seulement de proposer un mécanisme de namespaces simple,
 mais également de trouver une solution aux \emph{big functors}, une version des
 packs qui permettent d'englober les modules sous un foncteur et ainsi obtenir
@@ -314,17 +327,14 @@ particulier pour être efficace. De plus, l'idée est également de trouver une
 solution pour les namespaces functorisés, qui permettrait de mettre en oeuvre
 des bibliothèques totalement génériques et instantiées par l'utilisateur.
 
-
-\chapter{Solution}
-
 Dans le cadre d'un système efficace de namespaces, plusieurs solutions ont été
 proposée et envisagées. Il faut savoir que ce sujet est étudié informellement
-depuis déjà longtemps dans la communauté et plusieurs contributeurs ont proposé
-une solution. En revanche, les solutions étant souvent éloignées et les avis
-divergeants, aucun compromis n'a été établi vers une proposition qui pourrait
-satisfaire le plus de monde. Le but est ici de trouver ce compromis mais en
-proposant une solution concrète avec un prototype. L'intérêt est d'éviter de
-relancer une discussion sur la manière dont doit être ajoutée cette
+depuis déjà longtemps au sien de la communauté et plusieurs contributeurs ont
+proposé une solution. En revanche, les solutions étant souvent éloignées et les
+avis divergeants, aucun compromis n'a été établi vers une proposition qui
+pourrait satisfaire le plus de monde. Le but est ici de trouver ce compromis
+mais en proposant une solution concrète avec un prototype. L'intérêt est
+d'éviter de relancer une discussion sur la manière dont doit être ajoutée cette
 fonctionnalité, mais plutôt de discuter d'une solution effective et l'améliorer
 en fonction des avis reçus.
 
@@ -366,7 +376,7 @@ En partant de ce principe, il fallait donc trouver ce qu'était l'environnement
 de compilation, comment celui-ci était généré et comment l'utilisateur pourrait
 l'influencer : en effet, l'un des problèmes majeurs actuels est l'impossibilité
 d'utiliser deux unités de compilation de même nom dans un programme. Si
-l'environnement est capable de les distinguer cela ne poserait plsu de
+l'environnement est capable de les distinguer cela ne poserait plus de
 problème. Ce qui ressort également de ce problème est que pour que deux modules
 de même nom puissent cohabiter dans le système de fichiers, ils doivent être
 dans des dossiers distincts : le système de fichiers avec son organisation à
@@ -389,38 +399,16 @@ De cette manière, le coeur du langage ne subit aucune modification, et de plus,
 cela permet d'harmoniser la manière dont sont installés les bibliothèques, ou du
 moins propose une organisation standard et permet de réduire le besoin d'outils
 externes pour trouver un module (\emph{ocamlfind} par exemple). La syntaxe de
-l'en-tête est présentée en (\ref{header-bnf}).
+l'en-tête est présentée en annexe \ref{header-bnf}.
 
-\begin{figure}
-\begin{grammar}
-<module_name> = <uident>
-
-<header> ::= <namespace_decl> <imports>
-\alt <imports>
-
-<namespace_decl> ::= `in' `namespace' <mod_longident>
-
-<imports> ::= <import> <imports> 
-
-<import> ::= (`with'|`and') <ns_conf> 
-
-<ns_conf> ::= `(' <modules_constraints> `)' `of' <mod_longident>
-
-<modules_constraints> ::= <module_constraint>
-\alt <module_constraint> `;' <module_constraints>
-
-<modules_constraint> ::= `_'
-\alt <module_name> `as' <module_name>
-\alt <module_name> `as' `_'
-\alt <module_name>
-\end{grammar}
-\caption{Syntaxe d'un en-tête de fichier \texttt{.ml(i)}}
-\label{header-bnf}
-\end{figure}
 
 Dans cette syntaxe, il faut noter que l'en-tête est séparé en deux partie
 distinctes. Tout d'abord, on remarque que le namespace auquel appartient l'unité
-de compilation est déclaré explicitement. Cela permet au compilateur de
+de compilation est déclaré explicitement, par exemple:
+\begin{OCaml}
+in namespace MyNamespace
+\end{OCaml}
+ Cela permet au compilateur de
 récupérer de manière automatique tous les modules susceptibles d'appartenir au
 même namespace. De plus, déclarer de manière explicite au compilateur lui permet
 de générer le fichier dans le bon dossier. La déclaration d'un namespace n'est
@@ -430,13 +418,25 @@ La seconde partie est la plus intéressante et montre les possibilités de
 déclaration de l'environnement de compilation. La déclaration des imports est
 lue séquenciellement. Chaque ligne déclare l'ensemble des modules à importer
 depuis l'environnement donné. Cet ensemble est déclaré par l'utilisateur, ce qui
-lui permet de raffiner ses choix d'après les règles de \texttt{<module_constraint>}:
+lui permet de raffiner ses choix à la manière de Scala:
 \begin{itemize}
 \item En important module par module;
-\item En important un module tout en l'aliasant (\lstinline{Mod as Mod_from_ns});
-\item En important tous les modules (\texttt{\_});
+\begin{OCaml}
+with MyNamespace.(M, N)
+\end{OCaml}
+\item En important un module tout en l'aliasant;
+\begin{OCaml}
+with MyNamespace.(M as MyModule) 
+\end{OCaml}
+\item En important tous les modules;
+\begin{OCaml}
+with MyNamespace.(_)
+\end{OCaml}
 \item En masquant un module, pour ne pas inclure tous les modules dans
   l'ensemble généré par la contrainte précédente.
+\begin{OCaml}
+with MyNamespace.(_, M as _)
+\end{OCaml}
 \end{itemize}
 
 Cet en-tête n'existe plus à partir de la phase de typage, et se fait en deux
@@ -466,13 +466,65 @@ contient un module Pervasives, celui-ci est automatiquement ouvert (sauf s'il
 est aliasé ou masqué dans les contraintes). De plus, chaque module d'un
 namespace ouvre implicitement ce module.
 
+\paragraph{Calcul des dépendances}
+
+Un trait intéressant qu'apportent l'introduction de namespaces est qu'il est
+possible syntaxiquement de calculer des dépendances. En effet, les modules sont
+importés explicitement, par conséquent il est beaucoup plus facile de savoir de
+quels modules le fichier actuel dépend. La seule inconnue reste le cas où
+l'import se fait à l'aide de \texttt{_} : à ce moment là, lorsque la provenance
+d'un module ne peut pas être inférée depuis les imports, il est possible de
+regarder dans les dossiers qui correspondent aux namespaces dont tous les
+modules ont été importés. Il est également possible de lire les premiers tokens
+des fichiers dont le nom correspond pour vérifier que le namespace déclaré
+correspond à l'un de ceux utilisés.
+
+\paragraph{Recherche d'unités de compilation}
+
+Comme précédemment évoqué, les namespaces sont directement transformés en
+dossiers sur le système de fichiers. Ainsi, lorsque le compilateur devra
+compiler une unité, il devra regarder sur celui-ci pour trouver les
+\texttt{cmis} correspondant aux dépendances. Il est possible de lui spécifier
+plusieurs chemins dans le système où chercher, ainsi le cmi qui sera gardé sera
+celui qui aura été trouvé en premier dans l'ordre des chemins. La recherche dans
+des dossiers pour trouver des unités appartenant à des namespaces se fait de la
+même manière : le premier cmi trouvé sera utilisé. Ce comportement est le même
+pour les \texttt{cmos/cmxs} au moment de la création d'une archive ou d'un
+exécutable.
+
+\paragraph{Namespaces et structures}
+
+Alternativement à la sémantique actuelle de l'import de modules qui sont
+simplement ajoutés dans l'environnement, il est également possible de
+transformer l'en-tête en un ensemble de structure pour utiliser explicitement le
+chemin du namespace. Cela a pour conséquence de ne pas nécessiter un renommage
+en cas de conflit, mais aussi d'utiliser des namespaces comme arguments de
+foncteurs (ou comme modules de première classe). Par exemple, l'en-tête suivant
+:
+\begin{OCaml}
+with Stdlib.(List; Map)
+and Stdlib.Internals.(CamlinternalFormat)
+\end{OCaml}
+serait traduit en
+\begin{OCaml}
+module Stdlib =
+  struct
+    module List = ...
+    module Map = ...
+    module Internals =
+      struct
+        module CamlinternalFormat = ...
+      end
+  end
+\end{OCaml}
+
 \section{Alternative aux \emph{big functors}}
 
 Le deuxième problème à résoudre est celui de trouver une contrepartie aux
 \emph{big functors} pour les namespaces. Pour rappel, les big functors sont une
 extension particulière des packs, qui permet au lieu de faire un simple module
 comprenant pour sous-modules des unités de compilation d'avoir un pack
-``générique''. L'idée est ici d'englober ces sous-modules sous un foncteur, et
+``paramétrique''. L'idée est ici d'englober ces sous-modules sous un foncteur, et
 ainsi permettre d'abstraire certaines des dépendances de ces modules pour en
 faire des arguments de ce foncteur. Ainsi, il devient possible d'avoir des packs
 instanciés sous différentes implémentations.
@@ -519,7 +571,7 @@ celles-ci appliquées sur une implémentation. On introduit alors une nouvelle
 option \texttt{-apply} au compilateur pour donner ces arguments et créer ces
 instances. Par exemple, l'instanciation du module précédent serait :
 \begin{verbatim}
-ocamlc -c -apply inmpl my_module.cmo
+ocamlc -c -apply impl.cmi my_module.cmo
 \end{verbatim}
 Ceci va créer une nouvelle unité de compilation \texttt{my\_module.cmo} qui
 donnera \texttt{impl.cmo} à la functor unit et donnera donc un module instancié
@@ -557,9 +609,13 @@ d'utilisation est donné dans le chapitre suivant.
 Un prototype de cette solution est disponible à l'adresse suivante, et avec un
 jeu de test et d'exemples.
 
-\chapter{Exemples d'utilisation et analyse}
+\chapter{Contexte, exemples d'utilisation et analyse}
+
+A découper en deux chapitres ?
 
 \section{Environnement de travail}
+
+!!!A réécrire!!!
 
 \subsection{Implémentation de namespaces}
 
@@ -723,7 +779,7 @@ ne soit pas automatiquement importé) :
 
 \begin{OCaml}
 (* my_prog.ml *)
-with (_) of Stdlib
+with Stdlib.(_)
 
 type list = Linkedlist.t
 \end{OCaml}
@@ -745,9 +801,9 @@ benchmarks ou des tests sur des algorithmes.
 Par exemple, un programme qui ferait des benchmarks sur les implémentations de
 \texttt{Hashtbl} de chacune :
 \begin{OCaml}
-with (Hashtbl) of Stdlib
-and (Hashtbl as CHtbl) of Core
-and (Hashtbl as BHtbl) of Batterie
+with Stdlib.(Hashtbl)
+and Core.(Hashtbl as CHtbl)
+and Batteries.(Hashtbl as BHtbl)
 
 ...
 let _ =
@@ -785,7 +841,7 @@ longs, permet d'éviter ces recompilations inutiles.
 L'intérêt d'utiliser un \emph{en-tête} permet de dissocier le mécanisme de
 déclaration et d'import du reste du langage. La syntaxe peut cependant paraître
 peu naturelle, notamment pour l'import de modules : 
-\lstinline{with  ... of...}. 
+\lstinline{with  ......}. 
 D'autres langages utilisent le mot-clé \emph{import} qui semble
 déjà bien plus clair, néanmoins cela nécessiterait d'ajouter un nouveau mot-clé
 au langage (en plus de \texttt{namespace}). Cela n'est bien évidemment pas un
@@ -796,11 +852,7 @@ actuelle. Ajouter un mot-clé peut-être dangereux car celui-ci peut être utili
 comme nom de variable dans l'un de ces programmes et par conséquent n'être plus
 compilable. Bien évidemment, modifier le nom d'une variable n'est pas vraiment
 un problème, mais cela est à prendre en considération, et explique pourquoi ce
-choix de mot-clés qui sont déjà utilisés dans le langage. Une syntaxe plus
-naturelle aurait été \texttt{with ... from ...}, mais \texttt{from} est un nom
-de variable légitime, par exemple dans une application qui gérerait des
-messages, où \texttt{from} pourrait être par exemple l'IP ou le nom de
-l'expéditeur.
+choix de mot-clés qui sont déjà utilisés dans le langage. 
 
 Leur intérêt se situe particulièrement sur la manière dont peuvent être décrites
 les bibliothèques, comment celles-ci sont installées et l'espoir de
@@ -923,7 +975,7 @@ ce namespace. On suppose que Lwt appartient au namespace Ocsigen :
 \begin{OCaml}
 (* cohttp/lwt/monad.ml *)
 in namespace Cohttp.Lwt
-with (Lwt) of Ocsigen
+with Ocsigen.(Lwt)
 
 type 'a t = 'a Lwt.t
 
@@ -945,7 +997,7 @@ ocamlc -c -apply cohttp/lwt/monad.cmo cohttp/protocol.cmo
 Si finalement on écrit un serveur très simple à l'aide de Cohttp.Lwt :
 \begin{OCaml}
 (* my_server.ml *)
-with (Protocol) of Cohttp.Lwt
+with Cohttp.Lwt.(Protocol)
 
 ...
 \end{OCaml}
@@ -1063,6 +1115,17 @@ modules directement dans le programme sans import préalable. Pour cela, il
 faudra définir une syntaxe claire et modifier légèrement le système de types
 pour prendre en compte ces nouvelles informations.
 
+De même, les namespaces importés en tant que structures sont pour le moment
+compilés relativement naïvement, en ajoutant dans l'AST directement les
+modules. Cela peut avoir une conséquence fâcheuse dans le sens où ceux-ci seront
+alors exportés à l'extérieur de l'unité de compilation. Une solution serait de
+faire directement une substitution au moment du typage, remplacer le chemin par
+la structure directement. De plus, il pourrait être intéressant d'étendre le
+mécanisme d'ouverture automatique de modules à des ensembles de modules. Par
+exemple, au lieu d'avoir simplement un module Pervasives utiliser des namespaces
+ayant pour nom Pervasives. Néanmoins, cette extension demandera plus de travail,
+notamment car il peut-être difficile de gérer l'ordre d'ouverture.
+
 De plus, il serait intéressant de lever certaines restrictions sur les functor
 units. En l'état actuel il n'y a pas de currification, mais cela ne devrait pas
 être particulièrement difficile à ajouter. De plus, on pourrait supposer que les
@@ -1083,6 +1146,35 @@ déclarer des unités functorisées et leurs applications.
 \bibliography{biblio}
 
 \appendix
+
+\chapter{Syntaxe d'un en-tête}
+\label{header-bnf}
+
+%% \begin{figure}
+\begin{grammar}
+<module_name> = <uident>
+
+<header> ::= <namespace_decl> <imports>
+\alt <imports>
+
+<namespace_decl> ::= `in' `namespace' <mod_longident>
+
+<imports> ::= <import> <imports> 
+
+<import> ::= (`with'|`and') <ns_conf> 
+
+<ns_conf> ::= <mod_longident> `.' `(' <modules_constraints> `)'
+
+<modules_constraints> ::= <module_constraint>
+\alt <module_constraint> `;' <module_constraints>
+
+<modules_constraint> ::= `_'
+\alt <module_name> `as' <module_name>
+\alt <module_name> `as' `_'
+\alt <module_name>
+\end{grammar}
+%% \caption{Syntaxe d'un en-tête de fichier \texttt{.ml(i)}}
+%% \end{figure}
 
 \chapter{Formalisme simple de l'édition des liens avant et après 4.02}
 \label{appendix-soa}
